<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="com.flauschcode.broccoli.recipe.crud.CreateAndEditRecipeViewModel" />
        <variable name="activity" type="com.flauschcode.broccoli.recipe.crud.CreateAndEditRecipeActivity" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.flauschcode.broccoli.recipe.crud.CreateAndEditRecipeActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.Broccoli.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.Broccoli.PopupOverlay"
                app:layout_scrollFlags="noScroll"
                app:title="@string/new_recipe"
                app:navigationIcon="@drawable/ic_close_24dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_save_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:padding="0dp"
                    android:textColor="?attr/colorOnPrimarySurface"
                    android:text="@string/save_action"
                    android:layout_gravity="end"
                    android:onClick="@{() -> activity.onSaveClick(viewModel.recipe)}" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:background="@drawable/image_background">

                <ImageView
                    android:id="@+id/new_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_bar_height"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:scaleType="centerCrop"
                    android:onClick="@{() -> activity.onImageClick()}"
                    app:placeholder="@{@drawable/placeholder}"
                    app:imageName="@{viewModel.recipe.imageName}"
                    android:contentDescription="@string/recipe_photo_accessibility"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/new_image"
                    app:layout_constraintEnd_toEndOf="@id/new_image"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/change_photo"
                        app:customIconTint="@{viewModel.recipe.imageName}"
                        android:src="@drawable/ic_photo_camera_24dp"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_title_24dp"
                    android:hint="@string/title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:singleLine="true"
                        android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                        android:text="@={viewModel.recipe.title}" />

                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_categories_24dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_arrow_drop_down_24dp"
                android:hint="@string/categories">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:singleLine="true"
                    android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                    android:onClick="onCategoryClick"
                    app:categories="@{viewModel.recipe.categories}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_info_24dp"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                    android:text="@={viewModel.recipe.description}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_link_24dp"
                android:hint="@string/source">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:singleLine="true"
                    android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                    android:text="@={viewModel.recipe.source}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_person_24dp"
                android:hint="@string/servings">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_servings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                    android:singleLine="true"
                    android:text="@={viewModel.recipe.servings}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_time_24dp"
                android:hint="@string/preparation_time">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_preparation_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                    android:text="@={viewModel.recipe.preparationTime}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_list_bulleted_24dp"
                android:hint="@string/ingredients">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                    android:text="@={viewModel.recipe.ingredients}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_list_numbered_24dp"
                android:hint="@string/directions">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_directions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                    android:text="@={viewModel.recipe.directions}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_fire_24dp"
                android:hint="@string/nutritional_values">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_nutritional_values"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                    android:text="@={viewModel.recipe.nutritionalValues}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_notes_24dp"
                android:hint="@string/notes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:onTextChanged="@{(s, start, before, count) -> activity.onTextChanged(s, start, before, count)}"
                    android:text="@={viewModel.recipe.notes}" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>